# metac-bot-template

./: .gitignore  10_hard_questions.ipynb  Available_models.ipynb  Binary.ipynb  CA2.ipynb  CA3.ipynb  CA3_generalized.ipynb  CA3_llama3.ipynb  CA3_perplexity.ipynb  CA4.ipynb  CA4_firstpass.ipynb  CA4_pass2.ipynb  CA5.ipynb  Community_Alignment.ipynb  Community_Alignment.py  EnhancedResearchPro.py  Get_All_Open_Questions.ipynb  Get_All_Resolved_Questions.ipynb  Historical_Backtest.ipynb  Historical_Backtest.py  IFP.py  Leaderboard Review.ipynb  Metaculus_Bot_Template.ipynb  Multiple Choice.ipynb  Numeric.ipynb  ProSearchSignature.py  Prompt Engineering 1.ipynb  Prompt Engineering 12348.ipynb  Prompt Engineering 17763.ipynb  Prompt Engineering 20683.ipynb  Prompt Engineering 3095.ipynb  Prompt Engineering 4083.ipynb  Prompt Engineering 4830.ipynb  Quickstart_Historical_Backtest.ipynb  Quickstart_Historical_Backtest.py  RAGForecaster.py  ResearchProModule.py  ResolvedQuestionsToJSON.ipynb  Untitled.ipynb  Untitled1.ipynb  (+124 more)
asknews/: 1002.md  10036.md  10043.md  10176.md  10220.md  10229.md  10243.md  10244.md  10359.md  10393.md  10409.md  10436.md  1052.md  1056.md  10574.md  1058.md  1059.md  1061.md  10614.md  10626.md  10642.md  10643.md  10658.md  10667.md  10686.md  10697.md  10709.md  10744.md  10765.md  10766.md  10767.md  10768.md  10806.md  10810.md  10832.md  10834.md  10851.md  10872.md  1088.md  1090.md  (+1031 more)
forecast_cogito:latest/: 1337.md  1454.md  1482.md  2622.md  3054.md  5531.md  6614.md  6633.md  7811.md  8734.md
forecast_community/: 1002.md  10036.md  (+610 more)
(+9801 files in other folders)
